--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -17,52 +17,58 @@
 </head>
 
 <body>
-    <div id="container">
-        <header>
-            <i class="fas fa-chess-rook" id="firstkrok"></i>
-            <div>Kacper Polok</div>
-            <div id="tren">Trener Szachowy</div>
-            <i class="fas fa-chess-rook" id="sekrok"></i>
-        </header>
-        <article id="about">
-            <i class="fas fa-chess"></i>
-            <span> O mnie</span>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam esse suscipit accusamus iure quidem
-                delectus omnis eaque soluta eius sequi. Quo soluta voluptas culpa facere tenetur necessitatibus vero
-                totam aperiam?</p>
-        </article>
+    <main>
 
-        <article id="about">
-            <i class="fas fa-chess-bishop"></i>
-            <span> Współpraca</span>
+        <div id="container">
+            <header>
+                <i class="fas fa-chess-rook" id="firstkrok"></i>
+                <div>
+                    <h1> Kacper Polok</h1>
+                </div>
+                <div id="tren">Trener Szachowy</div>
+                <i class="fas fa-chess-rook" id="sekrok"></i>
+            </header>
+            <article id="about">
+                <i class="fas fa-chess"></i>
+                <span> O mnie</span>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam esse suscipit accusamus iure quidem
+                    delectus omnis eaque soluta eius sequi. Quo soluta voluptas culpa facere tenetur necessitatibus vero
+                    totam aperiam?</p>
+            </article>
 
-            <ul>
-                <li> <i class="fas fa-chess-pawn" id="pawn"></i>Szkola szachowa</li>
+            <article id="Collab">
+                <i class="fas fa-chess-bishop"></i>
+                <span> Współpraca</span>
 
-                <li> <i class="fas fa-chess-pawn" id="pawn"></i>Chess24</li>
-                <li> <i class="fas fa-chess-pawn" id="pawn"></i>Szkola szachowa</li>
+                <ul>
+                    <li> <i class="fas fa-chess-pawn"></i>Szkola szachowa</li>
 
-                <li> <i class="fas fa-chess-pawn" id="pawn"></i>Chess24</li>
-            </ul>
-        </article>
+                    <li> <i class="fas fa-chess-pawn"></i>Chess24</li>
+                    <li> <i class="fas fa-chess-pawn"></i>Szkola szachowa</li>
+
+                    <li> <i class="fas fa-chess-pawn"></i>Chess24</li>
+                </ul>
+            </article>
 
 
-        <footer> <i class="fas fa-chess-board"></i>
-            <span> Kontakt</span>
-            <ul>
-                <li>
-                    <i class="fab fa-facebook-square"></i></li>
+            <footer> <i class="fas fa-chess-board"></i>
+                <span> Kontakt</span>
+                <ul>
+                    <li>
+                        <i class="fab fa-facebook-square"></i></li>
 
-                <li>
-                    <i class="fab fa-instagram-square"></i></li>
-                <li>
-                    <i class="fab fa-twitch"></i></li>
+                    <li>
+                        <i class="fab fa-instagram-square"></i></li>
+                    <li>
+                        <i class="fab fa-twitch"></i></li>
 
-                <li>
-                    <i class="fab fa-discord"></i></li>
-            </ul>
-        </footer>
-    </div>
+                    <li>
+                        <i class="fab fa-discord"></i></li>
+                </ul>
+            </footer>
+        </div>
+    </main>
+
 </body>
 
 </html>
